Change colour to signature

--- a/css/style.scss
+++ b/css/style.scss
@@ -20,8 +20,8 @@ $darker:         #21211E;
 $dark:           #2D2D29;
 $medium:         #3B3B35;
 $light-medium:   #969696;
-$dark-blue:      #215A6D;
-$light-blue:     #3CA2A2;
+$dark-blue:      #054494;
+$light-blue:     #4D80C9;
 $green:          #92C7A3;
 $light:          #DFECE6;
 $white:          #FFFFFF;
